# segment-rtree

./: Cargo.toml  README.md  overlay.md  rings.md  segment_rtree.md
benches/: build_rtree.rs  my_benchmark.rs  point_in_polygon.rs
benches/utils/: mod.rs  other_impls.rs
src/: coordinate.rs  errors.rs  from_wkt.rs  geometries.rs  geometry_state.rs  lib.rs  line_string.rs  linear_ring.rs  polygon.rs  rectangle.rs  segment_path.rs  typestate.rs  utils.rs
src/algorithms/: clip.rs  clip_polygon.rs  min_heap.rs  mod.rs  point_in_polygon.rs  polygon_validation.rs
src/flatbush/: flatbush_impl.rs  hilbert.rs  mod.rs
src/seg_rtree/: clip.rs  mod.rs  rtree.rs  segment_union.rs
