[package]
name = "seg_rtree"
version = "0.1.0"
authors = ["James Gill <jagill@fb.com>"]
edition = "2018"

[dependencies]
thiserror = "^1.0"
wkt = "^0.8"

[dev-dependencies]
criterion = "^0.3"
rand = {version = "0.7", features=["small_rng"]}
rstar = "^0.8"

[[bench]]
name = "point_in_polygon"
harness = false

[[bench]]
name = "build_rtree"
harness = false